로그아웃 처리

--- a/nodejs/Node.js 웹개발로 알아보는 백엔드 자바스크립트의 이해/nodeServerVimeo/views/main.ejs
+++ b/nodejs/Node.js 웹개발로 알아보는 백엔드 자바스크립트의 이해/nodeServerVimeo/views/main.ejs
@@ -9,11 +9,10 @@
     <body>
         <h1>main page</h1>
 
-        <h3> welcome, <%= id %> </h3>
+        <h3> welcome, <%= id %> 번째 가입 고객님!! </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl tincidunt eget nullam non. Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Volutpat odio facilisis mauris sit amet massa. Commodo odio aenean sed adipiscing diam donec adipiscing tristique. Mi eget mauris pharetra et. Non tellus orci ac auctor augue. Elit at imperdiet dui accumsan sit. Ornare arcu dui vivamus arcu felis. Egestas integer eget aliquet nibh praesent. In hac habitasse platea dictumst quisque sagittis purus. Pulvinar elementum integer enim neque volutpat ac.</p>
         
-        <img src="images/crong.jpg" alt="" width="300px;">
-        <script src ="main.js"></script>
+        <div><a href="/logout">logout</a></div>
 
     </body>
 </html>
