--- a/nodejs/NodeJS 정복하기/node/views/layouts/layout.hbs
+++ b/nodejs/NodeJS 정복하기/node/views/layouts/layout.hbs
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/semantic/semantic.min.css"/>
+    <script src="/semantic/semantic.min.js"></script>
 </head>
 <body>
     {{{ body }}}
