--- a/nodejs/NodeJS 정복하기/node/views/layouts/layout.hbs
+++ b/nodejs/NodeJS 정복하기/node/views/layouts/layout.hbs
@@ -1,4 +1,5 @@
-	<html>
+<!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="utf-8" />
@@ -8,6 +9,7 @@
     <title>Vocab App</title>
 
     <link href="/semantic/semantic.min.css" rel="stylesheet" />
+    <link href="/styles/index.css" rel="stylesheet" />
     <script src="/semantic/semantic.min.js"></script>
     <style type="text/css">
         body {
