--- a/nodejs/NodeJS 정복하기/node/views/home.hbs
+++ b/nodejs/NodeJS 정복하기/node/views/home.hbs
@@ -1,5 +1,11 @@
 <div class="ui main text container">
     <h1 class="ui header">Semantic UI Fixed Template</h1>
+    <form method="POST" action="/">
+        <div class="ui action input fluid">
+            <input type="text" placeholder="Search..." name="query">
+            <button class="ui button" type="submit">Search</button>
+        </div>
+    </form>
     {{#each words}}
     <div class="card flex-box">
         <div class="flex-1 main-word">
