--- a/nodejs/NodeJS 정복하기/node/views/home.hbs
+++ b/nodejs/NodeJS 정복하기/node/views/home.hbs
@@ -1,5 +1,4 @@
-<div class="ui main text container">
-    <h1 class="ui header">Semantic UI Fixed Template</h1>
+	    <h1 class="ui header">Semantic UI Fixed Template</h1>
     <form method="POST" action="/">
         <div class="ui action input fluid">
             <input type="text" placeholder="Search..." name="query">
@@ -18,6 +17,22 @@
                 {{/each}}
             </ul>
         </div>
+        <div class="delete-btn" onclick="deleteWord(this, '{{this.word}}')">
+            <div>X</div>
+        </div>
     </div>
     {{/each}}
 </div>
+<script>
+    const deleteWord = (el, word) => {
+        $.ajax("/", {
+            method: "DELETE",
+            data: {
+                word,
+            }
+        })
+        let p = el.parentNode.parentNode;
+        let c = el.parentNode;
+        p.removeChild(c)
+    }
+</script>
